--- a/especialistas-web/src/main/webapp/src/modules/usuarios/usuarios.list.html
+++ b/especialistas-web/src/main/webapp/src/modules/usuarios/usuarios.list.html
@@ -8,8 +8,8 @@
                     {{usuario.nombre}} <br>
                     {{usuario.cedula}} 
 
-                    <a href="#" style="color: #f44" ui-sref="usuariosDelete({usuarioId: usuario.id})">Eliminar</a>
-                    <a href="#" ui-sref="usuarioUpdate({usuarioId: usuario.id})">Editar</a>
+                    <a href="#" style="color: #f44" ui-sref="usuariosDelete({usuarioId: usuario.id})" uk-icon="icon: trash"></a>
+                    <a href="#" style="color: #44b3ee" ui-sref="usuarioUpdate({usuarioId: usuario.id})" uk-icon="icon: pencil"></a>
                 </div>
             </div>
         </div>
