--- a/especialistas-web/src/main/webapp/src/modules/pagos/pagos.list.html
+++ b/especialistas-web/src/main/webapp/src/modules/pagos/pagos.list.html
@@ -1,5 +1,5 @@
 
-        <table class="uk-table uk-table-small uk-table-hover uk-table-divider uk-width-1-1">
+        <table class="uk-table uk-table-small uk-table-hover uk-table-divider uk-width-1-1 uk-card uk-card-default">
             
             <thead>
                 <tr>
