--- a/especialistas-web/src/main/webapp/src/modules/tarjetas/tarjetas.list.html
+++ b/especialistas-web/src/main/webapp/src/modules/tarjetas/tarjetas.list.html
@@ -1,7 +1,6 @@
-<div class="col-sm-12">
     <div class="usuario" ng-repeat="tarjeta in tarjetasRecords">
         <div class="col-sm-4 col-lg-3 pacman">
-            <div class="usuario-padre">
+            <div class="usuario-padre uk-card uk-card-default uk-card-hover">
                 <a ui-sref="tarjetaDetail({tarjetaId: tarjeta.id})">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/72/MasterCard_early_1990s_logo.png/220px-MasterCard_early_1990s_logo.png" alt="">
                 </a>
@@ -15,5 +14,3 @@
             </div>
         </div>
     </div>
-    
-</div>
