--- a/especialistas-web/src/main/webapp/src/modules/usuarios/usuarios.list.html
+++ b/especialistas-web/src/main/webapp/src/modules/usuarios/usuarios.list.html
@@ -1,6 +1,6 @@
     <div class="usuario" ng-repeat="usuario in usuariosRecords">
         <div class="pacman">
-            <div class="usuario-padre uk-card uk-card-default">
+            <div class="usuario-padre uk-card uk-card-default uk-card-hover">
                 <div ui-sref="usuarioDetail({usuarioId: usuario.id})" class="alfax uk-card-header">
                     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS5PiRLyIsW9zpkhazNEVeuuFcPvyjWLlfnSBkQOL2ZS_p8DTgP" alt="">
                 </div>
