--- a/especialistas-web/src/main/webapp/src/modules/tarjetas/tarjetas.list.html
+++ b/especialistas-web/src/main/webapp/src/modules/tarjetas/tarjetas.list.html
@@ -8,8 +8,8 @@
                     {{tarjeta.id}} <br>
                     {{tarjeta.numero}} 
 
-                    <a href="#" style="color: #f44" ui-sref="tarjetasDelete({tarjetaId: tarjeta.id})">Eliminar</a>
-                    <a href="#" ui-sref="tarjetaUpdate({tarjetaId: tarjeta.id})">Editar</a>
+                    <a href="#" style="color: #f44" ui-sref="tarjetasDelete({tarjetaId: tarjeta.id})" uk-icon="icon: trash"></a>
+                    <a href="#" style="color: #44b3ee" ui-sref="tarjetaUpdate({tarjetaId: tarjeta.id})" uk-icon="icon: pencil"></a>
                 </div>
             </div>
         </div>
