--- a/especialistas-web/src/main/webapp/src/modules/consultorios/delete/consultorios.delete.html
+++ b/especialistas-web/src/main/webapp/src/modules/consultorios/delete/consultorios.delete.html
@@ -1,5 +1,5 @@
-<div class="center-block well text-center">
+<div class="center-block well text-center uk-width-1-1">
     <h3>Confirmar eliminacion del consultorio con id: {{idConsultorio}} en el hospital con id: {{idHospital}}</h3>
-    <button id="confirm-delete" ng-click="deleteConsultorio()" class="btn btn-danger">Eliminar</button>
-    <a id="cancel-delete" ui-sref="hospitalesList" class="btn btn-info">Cancelar</a>
+    <button id="confirm-delete" ng-click="deleteConsultorio()" class="uk-button uk-button-primary">Eliminar</button>
+    <a id="cancel-delete" ui-sref="hospitalesList" class="uk-button uk-button-default">Cancelar</a>
 </div>
