--- a/especialistas-web/src/main/webapp/src/modules/examenes/delete/examen.delete.html
+++ b/especialistas-web/src/main/webapp/src/modules/examenes/delete/examen.delete.html
@@ -1,5 +1,5 @@
-<div class="center-block well text-center">
+<div class="center-block well text-center uk-width-1-1">
     <h1>¿Desea eliminar este examen?</h1>
-    <button id="confirmar-eliminacion" ng-click="deleteExam()" class="btn btn-danger">Eliminar</button>
-    <a id="cancelar-eliminacion" ui-sref="laboratoriosList" class="btn btn-info">Cancelar</a>
+    <button id="confirmar-eliminacion" ng-click="deleteExam()" class="uk-button uk-button-primary">Eliminar</button>
+    <a id="cancelar-eliminacion" ui-sref="laboratoriosList" class="uk-button uk-button-default">Cancelar</a>
 </div>
