--- a/especialistas-web/src/main/webapp/src/modules/horas/delete/horas.delete.html
+++ b/especialistas-web/src/main/webapp/src/modules/horas/delete/horas.delete.html
@@ -1,6 +1,6 @@
-<div class="center-block well text-center">
+<div class="center-block well text-center uk-width-1-1">
     <h1>¿Está seguro que quiere eliminar esta hora?</h1>
-    <button id="confirm-delete" ng-click="deleteHora()" class="btn btn-danger">Borrar</button>
-    <a id="cancel-delete" ui-sref="horaDetail({horaId})" class="btn btn-info">Cancelar</a>
+    <button id="confirm-delete" ng-click="deleteHora()" class="uk-button uk-button-primary">Eliminar</button>
+    <a id="cancel-delete" ui-sref="horaDetail({horaId})" class="uk-button uk-button-default">Cancelar</a>
 </div>
 
