--- a/especialistas-web/src/main/webapp/src/modules/hospitales/hospitales.list.html
+++ b/especialistas-web/src/main/webapp/src/modules/hospitales/hospitales.list.html
@@ -1,7 +1,8 @@
-<div class="col col-md-12">
-    <table class="table table-striped">
+
+    <table class="uk-table uk-table-small uk-table-hover uk-table-divider uk-width-1-1 uk-card uk-card-default">
         <thead>
             <tr>
+                <th></th>
                 <th>NOMBRE</th>
                 <th>ELIMINAR</th>
                 <th>EDITAR</th>
@@ -9,26 +10,21 @@
         </thead>
         <tbody>
             <tr ng-repeat="hospital in hospitalesRecords">
+                <td><input class="uk-checkbox" type="checkbox"></td>
                 <td id="{{$index}}-nombre"><a ui-sref="hospitalDetail({hospitalId: hospital.id})">{{hospital.nombre}}</a>
                 </td>
                 <td>
-                    <button type="button" class="btn btn-danger" ui-sref="hospitalDelete({hospitalId: hospital.id})">
-                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                    </button>
+                    <a href="#" uk-icon="icon: trash" style="color: #f44" ui-sref="hospitalDelete({hospitalId: hospital.id})"></a>
                 </td>
                 <td>
-                    <button type="button" class="btn btn-info" ui-sref="hospitalUpdate({hospitalId: hospital.id})">
-                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                    </button>
+                    <a href="#" uk-icon="icon: pencil" style="color: #44b3ee" ui-sref="hospitalUpdate({hospitalId: hospital.id})"></a>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <button type="button" class="btn btn-success" ui-sref="hospitalesCreate">
-                        <span class="glyphicon glyphicon-plus" aria-hidden="true" ></span>
-                    </button>
+                    <a ui-sref="hospitalesCreate">Agregar</a>
                 </td>
             </tr>
         </tbody>
     </table>
-</div>
+
