--- a/especialistas-web/src/main/webapp/src/modules/laboratorios/delete/laboratorio.delete.html
+++ b/especialistas-web/src/main/webapp/src/modules/laboratorios/delete/laboratorio.delete.html
@@ -1,6 +1,6 @@
 
-<div class="center-block well text-center">
+<div class="center-block well text-center uk-width-1-1">
     <h3>Confirmar eliminacion</h3>
-    <button id="confirm-delete" ng-click="deleteLab()" class="btn btn-danger">Eliminar</button>
-    <a id="cancel-delete" ui-sref="laboratoriosList" class="btn btn-info">Cancelar</a>
+    <button id="confirm-delete" ng-click="deleteLab()" class="uk-button uk-button-primary">Eliminar</button>
+    <a id="cancel-delete" ui-sref="laboratoriosList" class="uk-button uk-button-default">Cancelar</a>
 </div>
