--- a/especialistas-web/src/main/webapp/src/modules/medicamentos/medicamentos.list.html
+++ b/especialistas-web/src/main/webapp/src/modules/medicamentos/medicamentos.list.html
@@ -1,23 +1,23 @@
-<div class="container-fluid">
-    <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-        <div class="btn-group mr-2" role="group" aria-label="First group">
-            <a class="btn btn-info" ui-sref="medicamentoCreate"><span class="glyphicon glyphicon-plus-sign"></span> Nuevo Medicamento</a>
-        </div>
-    </div>
-    <div class="col-md-12">
-        <table class="table table-striped">
+
+        <table class="uk-table uk-table-small uk-table-hover uk-table-divider uk-width-1-1 uk-card uk-card-default">
             <thead>
                 <tr>
-                    <th>Nombre</th>    
+                    <th class="uk-table-shrink"></th>
+                    <th class="uk-table-expand">Nombre</th>    
                     <th>precio</th>    
                 </tr>
             </thead>
             <tbody>
                 <tr ng-repeat="medicamento in medicamentos">
+                    <td><input class="uk-checkbox" type="checkbox"></td>
                     <td id="{{$index}}-nombre"><a ui-sref="medicamentoDetail ({id: medicamento.id})">{{medicamento.nombre}}</a></td>
                     <td id="{{$index}}-precio">{{medicamento.precio}}</td>
                 </tr>
+                <tr>
+                    <td>
+                        <a ui-sref="medicamentoCreate">Agregar</a>
+                    </td>
+                </tr>
             </tbody>
         </table>
-    </div>
-</div>
+
