--- a/especialistas-web/src/main/webapp/src/modules/medicos/delete/medicos.delete.html
+++ b/especialistas-web/src/main/webapp/src/modules/medicos/delete/medicos.delete.html
@@ -1,7 +1,7 @@
 <alert ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert()">{{alert.msg}} </alert>
-<div class="center-block well text-center">
+<div class="center-block well text-center uk-width-1-1">
     <h1>¿Está seguro que quiere eliminar este médico?</h1>
-    <button id="confirm-delete" ng-click="deleteMedico()" class="btn btn-danger">Borrar</button>
-    <a id="cancel-delete" ui-sref="horasList({medicoId})" class="btn btn-info">Cancelar</a>
+    <button id="confirm-delete" ng-click="deleteMedico()" class="uk-button uk-button-primary">Eliminar</button>
+    <a id="cancel-delete" ui-sref="horasList({medicoId})" class="uk-button uk-button-default">Cancelar</a>
 </div>
 
