--- a/especialistas-web/src/main/webapp/src/modules/medicos/medicos.list.html
+++ b/especialistas-web/src/main/webapp/src/modules/medicos/medicos.list.html
@@ -1,7 +1,7 @@
-<div class="col col-md-12">
-    <table class="table table-striped">
+    <table class="uk-table uk-table-small uk-table-hover uk-table-divider uk-width-1-1 uk-card uk-card-default">
         <thead>
             <tr>
+                <th></th>
                 <th>NOMBRE</th>
                 <th>ESPECIALIZACION</th>
                 <th>ELIMINAR</th>
@@ -10,29 +10,23 @@
         </thead>
         <tbody>
             <tr ng-repeat="medico in medicosRecords">
+                <td><input class="uk-checkbox" type="checkbox"></td>
                 <td id="{{$index}}-nombre"><a ui-sref="medicoDetail({medicoId: medico.id})">{{medico.nombre}}</a>
                 </td>
                 <td>
                     {{medico.especializacion}}
                 </td>
                 <td>
-                    <button type="button" class="btn btn-danger" ui-sref="medicoDelete({medicoId: medico.id})">
-                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                    </button>
+                    <a href="#" uk-icon="icon: trash" style="color: #f44" ui-sref="medicoDelete({medicoId: medico.id})"></a>
                 </td>
                 <td>
-                    <button type="button" class="btn btn-info" ui-sref="medicoUpdate({medicoId: medico.id})">
-                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                    </button>
+                    <a href="#" uk-icon="icon: pencil" style="color: #44b3ee" ui-sref="medicoUpdate({medicoId: medico.id})"></a>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <button type="button" class="btn btn-success" ui-sref="medicosCreate">
-                        <span class="glyphicon glyphicon-plus" aria-hidden="true" ></span>
-                    </button>
+                    <a ui-sref="medicosCreate">Agregar</a>
                 </td>
             </tr>
         </tbody>
     </table>
-</div>
