--- a/especialistas-web/src/main/webapp/src/modules/ordenesMedicas/delete/ordenesMedicas.delete.html
+++ b/especialistas-web/src/main/webapp/src/modules/ordenesMedicas/delete/ordenesMedicas.delete.html
@@ -1,6 +1,6 @@
 <alert ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert()">{{alert.msg}} </alert>
-<div class="center-block well text-center">
+<div class="center-block well text-center uk-width-1-1">
     <h1>¿Está seguro que quiere eliminar esta orden?</h1>
-    <button id="confirm-delete" ng-click="deleteOrden()" class="btn btn-danger">Borrar</button>
-    <a id="cancel-delete" ui-sref="citasDetail({citasId: citaParaOrdenId})" class="btn btn-info">Cancelar</a>
+    <button id="confirm-delete" ng-click="deleteOrden()" class="uk-button uk-button-primary">Eliminar</button>
+    <a id="cancel-delete" ui-sref="citasDetail({citasId: citaParaOrdenId})" class="uk-button uk-button-default">Cancelar</a>
 </div>
