--- a/especialistas-web/src/main/webapp/index.html
+++ b/especialistas-web/src/main/webapp/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Start Page</title>
+        <title>Asanar</title>
 
         <!--Dependencias externas -->
         <link rel="stylesheet" href="bower_components/uikit/dist/css/uikit.min.css" />
