--- a/especialistas-web/src/main/webapp/src/modules/usuarios/usuarios.detail.html
+++ b/especialistas-web/src/main/webapp/src/modules/usuarios/usuarios.detail.html
@@ -52,7 +52,7 @@
                     <td id="{{$index}}-id">{{pago.id}}</td>
                     <td id="{{$index}}-ref">{{pago.ref}}</td>
                     <td id="{{$index}}-precio">{{pago.precio}}</td>
-                    <td id="{{$index}}-pai"><span ng-show="pago.pai == true" class="glyphicon glyphicon-ok" aria-hidden="true" style="color: #4cae4c"></span><span ng-show="pago.pai == false" class="glyphicon glyphicon-remove" aria-hidden="true" style="color: #f25"></span></td>
+                    <td id="{{$index}}-pai"><span ng-show="pago.pai == true" uk-icon="icon: check" aria-hidden="true" style="color: #4cae4c"></span><span ng-show="pago.pai == false" uk-icon="icon: close" aria-hidden="true" style="color: #f25"></span></td>
                     <td id="{{$index}}-metodo">{{pago.metodo}}</td>
                 </tr>
             </tbody>
