--- a/especialistas-web/src/main/webapp/index.html
+++ b/especialistas-web/src/main/webapp/index.html
@@ -53,7 +53,7 @@
         <script src="src/modules/farmacias/detail/farmacias.detail.ctrl.js" type="text/javascript"></script>
         <script src="src/modules/farmacias/create/farmacias.addMedicamento.ctrl.js" type="text/javascript"></script>
         <script src="src/modules/farmacias/delete/farmacias.deleteMedicamento.ctrl.js" type="text/javascript"></script>
-         <script src="src/modules/farmacias/detail/map.ctrl.js" type="text/javascript"></script>
+         <script src="src/modules/farmacias/detail/farmacias.map.ctrl.js" type="text/javascript"></script>
 
         <!-- Medicamento-->
         <script src="src/modules/medicamentos/medicamentos.mod.js" type="text/javascript"></script>
@@ -71,6 +71,7 @@
         <script src="src/modules/hospitales/create/hospitales.create.ctrl.js" type="text/javascript"></script>
         <script src="src/modules/hospitales/delete/hospitales.delete.ctrl.js" type="text/javascript"></script>
         <script src="src/modules/hospitales/update/hospitales.update.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/hospitales/hospitales.map.ctrl.js" type="text/javascript"></script>
         
         <!--Usuarios-->
         <script src="src/modules/usuarios/usuarios.mod.js" type="text/javascript"></script>
