--- a/especialistas-web/src/main/webapp/src/modules/farmacias/detail/farmacias.map.html
+++ b/especialistas-web/src/main/webapp/src/modules/farmacias/detail/farmacias.map.html
@@ -1,5 +1,5 @@
 <alert class="alert alert-danger" ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert()">{{alert.msg}} </alert>
-<div id="map_canvas" ng-controller="mapCtrl">
+<div id="map_canvas">
         <style type="text/css">
         ui-gmap-google-map,#map_canvas {
             height: 300px;
