--- a/especialistas-web/src/main/webapp/index.html
+++ b/especialistas-web/src/main/webapp/index.html
@@ -118,9 +118,9 @@
         <script src="src/modules/consultorios/delete/consultorios.delete.ctrl.js" type="text/javascript"></script>
         <script src="src/modules/consultorios/update/consultorios.update.ctrl.js" type="text/javascript"></script>
 
-        <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.js"></script>
-        <script src="https://rawgit.com/nmccready/angular-simple-logger/master/dist/angular-simple-logger.js"></script>
-        <script src="http://rawgit.com/angular-ui/angular-google-maps/master/dist/angular-google-maps.js"></script>
+        <script src="bower_components/lodash/dist/lodash.js"></script> 
+        <script src="bower_components/angular-simple-logger/dist/angular-simple-logger.js"></script> 
+        <script src="bower_components/angular-google-maps/dist/angular-google-maps.js"></script>
         
 
 
