--- a/especialistas-web/src/main/webapp/src/modules/medicos/medicos.detail.html
+++ b/especialistas-web/src/main/webapp/src/modules/medicos/medicos.detail.html
@@ -1,7 +1,6 @@
 <div class="row">
     <div class="col col-md-3">
-        <img width="200px" height="200px"
-             src="https://www.tenvinilo.com/vinilos-decorativos/img/large/adhesivo-medico-detalle-4723.jpg">
+        <img width="200px" height="200px" src="https://www.tenvinilo.com/vinilos-decorativos/img/large/adhesivo-medico-detalle-4723.jpg">
     </div>
     <div class="col col-md-9">
         <font color="#355384">
