examenes en lateral

--- a/especialistas-web/src/main/webapp/index.html
+++ b/especialistas-web/src/main/webapp/index.html
@@ -47,6 +47,8 @@
         <script src="src/modules/examenes/examen.detail.ctrl.js" type="text/javascript"></script>
         <script src="src/modules/examenes/delete/examenDelete.ctrl.js" type="text/javascript"></script>
         <script src="src/modules/examenes/update/examUpdate.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/examenes/get/examenes.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/examenes/post/examNew.ctrl.js" type="text/javascript"></script>
 
         <!-- Farmacia-->
         <script src="src/modules/farmacias/farmacias.mod.js" type="text/javascript"></script>
@@ -158,6 +160,7 @@
                     <a ui-sref="medicamentosList"><span uk-icon="icon: grid"></span>&nbsp;&nbsp;Medicamentos</a>
                     <a ui-sref="medicosList"><span uk-icon="icon: star"></span>&nbsp;&nbsp;Médicos</a>
                     <a ui-sref="laboratoriosList"><span uk-icon="icon: search"></span>&nbsp;&nbsp;Laboratorios</a>
+                    <a ui-sref="examenesList"><span uk-icon="icon: search"></span>&nbsp;&nbsp;Exámenes</a>
                     <a ui-sref="citasList"><span uk-icon="icon: calendar"></span>&nbsp;&nbsp;Citas</a>
                 </ul>
         </div>
