--- a/especialistas-web/src/main/webapp/src/modules/examenes/update/exam.update.html
+++ b/especialistas-web/src/main/webapp/src/modules/examenes/update/exam.update.html
@@ -13,7 +13,7 @@
                     <div class="form-group row">
                         <div class="form-group col-md-6">
                             <label for="examen-precio" class="col-sm-4">Precio:</label>
-                            <input type="number" min="10000" max="100000" step="100" id="examen-precio" required ng-model="precioExam" class="col-sm-6 form-control"/>
+                            <input type="number" min="5000" max="1000000" step="100" id="examen-precio" required ng-model="precioExam" class="col-sm-6 form-control"/>
                         </div>
                     </div>
                     <div class="form-group row">
