arreglo update lab

--- a/especialistas-web/src/main/webapp/index.html
+++ b/especialistas-web/src/main/webapp/index.html
@@ -167,7 +167,7 @@
                     <a ui-sref="medicamentosList"><span uk-icon="icon: grid"></span>&nbsp;&nbsp;Medicamentos</a>
                     <a ui-sref="medicosList"><span uk-icon="icon: star"></span>&nbsp;&nbsp;Médicos</a>
                     <a ui-sref="laboratoriosList"><span uk-icon="icon: search"></span>&nbsp;&nbsp;Laboratorios</a>
-                    <a ui-sref="examenesList"><span uk-icon="icon: search"></span>&nbsp;&nbsp;Exámenes</a>
+                    <a ui-sref="examenesList"><span uk-icon="icon: eyedropper"></span>&nbsp;&nbsp;Exámenes</a>
                     <a ui-sref="citasList"><span uk-icon="icon: calendar"></span>&nbsp;&nbsp;Citas</a>
                 </ul>
         </div>
