--- a/especialistas-web/src/main/webapp/src/modules/examenes/examen.detail_.html
+++ b/especialistas-web/src/main/webapp/src/modules/examenes/examen.detail_.html
@@ -22,7 +22,7 @@
             <br><button type="button" class="btn btn-info" ui-sref="examenUpdate({examenId: examenActual.id})">
                         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
              </button> <br>
-            <button type="button" class="btn btn-success" id="Volver-lista" ui-sref="laboratoriosList">
+            <button type="button" class="btn btn-success" id="Volver-lista" ui-sref="examenesList">
             <span class="glyphicon glyphicon-chevron-left"></span></button>
         </div>
     </div>
