--- a/especialistas-web/src/main/webapp/src/modules/examenes/update/exam.update.html
+++ b/especialistas-web/src/main/webapp/src/modules/examenes/update/exam.update.html
@@ -32,7 +32,7 @@
                     <div class="form-group row">
                         <div class="form-group col-sm-12">
                             <input  type="submit" value="Guardar" class="btn btn-success"/>
-                            <a class="btn btn-info" ui-sref='laboratoriosList'>Cancel</a>
+                            <a class="btn btn-info" ui-sref='examenesList'>Cancel</a>
                         </div>
                     </div>
                 </form>
