--- a/especialistas-web/src/main/webapp/src/modules/laboratorios/update/laboratorio.update.html
+++ b/especialistas-web/src/main/webapp/src/modules/laboratorios/update/laboratorio.update.html
@@ -1,24 +1,54 @@
-<form ng-submit="updateLab()" name="laboratorio">
-    
-    <div class="form-group">
-        <label for="laboratorioName">Nombre Laboratorio</label>
-        <input class="form-control" id="laboratorioName" required ng-model="labName" placeholder="Ingrese el nombre">
+
+<div class="container-fluid">
+    <div class="panel-group">
+        <div class="panel panel-primary">
+            <div class="panel-heading"><label ng-if="!edit" id="createExam">Actualizar laboratorio</label></div>
+            <div class="panel-body">
+                <form ng-submit="updateLab()" name="laboratorio">
+                    <div class="form-group row">
+                        <div class="form-group col-md-6">
+                            <br><label for="laboratorio-nombre" class="col-sm-4">Nombre</label>
+                            <input id="laboratorio-nombre" required ng-model="nombreLab" class="col-sm-6 form-control"/>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <div class="form-group col-md-6">
+                            <label for="laboratorio-ubiacionName" class="col-sm-4">Nombre ubicación</label>
+                            <input id="laboratorio-ubiacionName" required ng-model="nombreUbicacion" class="col-sm-6 form-control"/>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <div class="form-group col-md-6">
+                            <label for="laboratorioUbicacionLatitud" class="col-sm-4">Latitud</label><br>
+                            <input type="number" min="-4.25" max="11.91" step="0.01" id="laboratorioUbicacionLatitud" required  ng-model="latitud" class="col-sm-6 form-control"/>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <div class="form-group col-md-6">
+                            <label for="laboratorioUbicacionLongitud" class="col-sm-4">Longitud</label><br>
+                            <input type="number" min="-76.6" max="-67.18" step="0.01" id="laboratorioUbicacionLongitud" required  ng-model="longitud" class="col-sm-6 form-control"/>
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <div class="form-group col-sm-4" ng-if="!laboratorio.$valid">
+
+
+                        </div> 
+                    </div> 
+                    <div class="form-group row">
+                        <div class="form-group col-sm-12">
+                            <input  type="submit" value="Guardar" class="btn btn-success"/>
+                            <a class="btn btn-info" ui-sref='laboratoriosList'>Cancel</a>
+                        </div>
+                    </div>
+                </form>
+
+            </div>
+        </div>
     </div>
-    <div class="form-group">
-        <label for="laboratorioUbicacionName">Nombre Ubicación</label>
-        <input class="form-control" id="laboratorioUbicacionName" required ng-model="ubicacionName" placeholder="e.g. Barrios Unidos">
-    </div>
-    <div class="form-group">
-        <label for="laboratorioUbicacionLatitud">Latitud</label>
-        <input class="form-control" id="laboratorioUbicacionLatitud" required ng-model="ubicacionLatitud" placeholder="e.g. 1.100">
-    </div>
-    <div class="form-group">
-        <label for="laboratorioUbicacionLongitud">Longitud</label>
-        <input class="form-control" id="laboratorioUbicacionLongitud" required ng-model="ubicacionLongitud" placeholder="e.g. 1.100">
-    </div>
-    <input ng-show="laboratorio.$valid" type="submit" value="Save" class="btn btn-success"/>
-    <button type="reset" class="btn btn-info">Reiniciar</button>
-    <a class="btn btn-danger" ui-sref="laboratoriosList"> Cancelar </a>
-    
-</form>
+</div>
+
+
+
 
