--- a/especialistas-web/src/main/webapp/src/modules/citas/citas.list.html
+++ b/especialistas-web/src/main/webapp/src/modules/citas/citas.list.html
@@ -1,37 +1,33 @@
 <div class="col col-md-12">
-    <table class="table table-condensed">
+    <table class="uk-table uk-table-small uk-table-hover uk-table-divider uk-width-1-1 uk-card uk-card-default">
         <thead>
             <tr>
+                <th></th>
                 <th>CITA</th>
                 <th>ELIMINAR</th>
                 <th>EDITAR</th>
             </tr>
         </thead>
         <tr ng-repeat="cita in citas">
+            <td><input class="uk-checkbox" type="checkbox"></td>
 
             <td><a ui-sref="citasDetail({citasId: cita.id})">{{cita.comentarios}}</td>
             <td>
-                <button type="button" class="btn btn-danger" ui-sref="citasDelete({citasId: cita.id})">
-                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                </button>
+                <a href="#" uk-icon="icon: trash" style="color: #f44" ui-sref="citasDelete({citasId: cita.id})"></a>
             </td>
             <td>
-                <button type="button" class="btn btn-info" ui-sref="citasUpdate({citasId: cita.id})">
-                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                </button>
+                <a href="#" uk-icon="icon: pencil" style="color: #44b3ee" ui-sref="citasUpdate({citasId: cita.id})"></a>
             </td>
         </tr>
         <tr>
             <td>
-                <button type="button" class="btn btn-success" ui-sref="citasCreate">
-                    <span class="glyphicon glyphicon-plus" aria-hidden="true" ></span>
-                </button>
+                <a ui-sref="citasCreate">Agregar</a>
             </td>
         </tr>
     </table>
 </div>
 
-<table class="table table-bordered table-responsive">
+<table class="uk-table uk-table-small uk-table-hover uk-table-divider uk-width-1-1 uk-card uk-card-default">
     <tr>
         <td>Hora</td>
         <th>Lunes</th>
