--- a/especialistas-web/src/main/webapp/src/modules/hospitales/hospitales.list.html
+++ b/especialistas-web/src/main/webapp/src/modules/hospitales/hospitales.list.html
@@ -1,5 +1,5 @@
 
-    <table class="uk-table uk-table-small uk-table-hover uk-table-divider uk-width-1-1 uk-card uk-card-default">
+    <table ng-show="tipoUser!==1 && tipoUser!==2" class="uk-table uk-table-small uk-table-hover uk-table-divider uk-width-1-1 uk-card uk-card-default">
         <thead>
             <tr>
                 <th></th>
@@ -23,6 +23,23 @@
             <tr>
                 <td>
                     <a ui-sref="hospitalesCreate">Agregar</a>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+
+
+    <table ng-show="tipoUser!==3" class="uk-table uk-table-small uk-table-hover uk-table-divider uk-width-1-1 uk-card uk-card-default">
+        <thead>
+            <tr>
+                <th></th>
+                <th>NOMBRE</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr ng-repeat="hospital in hospitalesRecords">
+                <td><input class="uk-checkbox" type="checkbox"></td>
+                <td id="{{$index}}-nombre"><a ui-sref="hospitalDetail({hospitalId: hospital.id})">{{hospital.nombre}}</a>
                 </td>
             </tr>
         </tbody>
