--- a/especialistas-web/src/main/webapp/src/modules/farmacias/create/farmacia.create.html
+++ b/especialistas-web/src/main/webapp/src/modules/farmacias/create/farmacia.create.html
@@ -13,11 +13,11 @@
     </div>
     <div class="form-group">
         <label for="farmaciaName">Latitud</label>
-        <input class="form-control" id="latitudUbicacion" required ng-model="latitudUbicacion" placeholder="e.g. 2.6">
+        <input type="number" min="-4.25" max="11.91" step="0.1" class="form-control" id="latitudUbicacion" required ng-model="latitudUbicacion" placeholder="e.g. 2.6">
     </div>
     <div class="form-group">
         <label for="farmaciaName">Longitud</label>
-        <input class="form-control" id="longitudUbicacion" required ng-model="longitudUbicacion" placeholder="e.g. 2.6">
+        <input type="number" min="-76.6" max="-67.18" step="0.1" class="form-control" id="longitudUbicacion" required ng-model="longitudUbicacion" placeholder="e.g. 2.6">
     </div>
     <input ng-show="farmacia.$valid" type="submit" value="Save" class="btn btn-success"/>
     <button type="reset" class="btn btn-info">Reiniciar</button>
