--- a/especialistas-web/src/main/webapp/src/modules/medicos/medicos.list.html
+++ b/especialistas-web/src/main/webapp/src/modules/medicos/medicos.list.html
@@ -11,7 +11,7 @@
         <tbody>
             <tr ng-repeat="medico in medicosRecords">
                 <td><input class="uk-checkbox" type="checkbox"></td>
-                <td id="{{$index}}-nombre"><a ui-sref="medicoDetail({medicoId: medico.id})">{{medico.nombre}}</a>
+                <td id="{{$index}}-nombre"><a ui-sref="horasList({medicoId: medico.id})">{{medico.nombre}}</a>
                 </td>
                 <td>
                     {{medico.especializacion}}
