--- a/especialistas-web/src/main/webapp/src/modules/usuarios/login/usuarios.login.html
+++ b/especialistas-web/src/main/webapp/src/modules/usuarios/login/usuarios.login.html
@@ -10,7 +10,7 @@
             </div>
             <div>
                 <div class="uk-card-body">
-                    <h3 class="uk-card-title">Media Left</h3>
+                    <h3 class="uk-card-title">Asanar</h3>
                     <p>Ingresa para.</p>
                     <form>
 
