--- a/especialistas-web/src/main/webapp/src/modules/tarjetas/new/tarjetas.new.html
+++ b/especialistas-web/src/main/webapp/src/modules/tarjetas/new/tarjetas.new.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="panel-group">
         <div class="panel panel-primary">
-            <div class="panel-heading"><label ng-if="!edit" id="createAuthor">Create new Author</label>
+            <div class="panel-heading"><label ng-if="!edit" id="createAuthor">Crear una nueva tarjeta</label>
                 <label ng-if="edit" id="editAuthor">Editar Tarjeta</label></div>
             <div class="panel-body">
                 <form ng-submit="createTarjeta()" name="tarjeta">
@@ -18,7 +18,7 @@
                         <div class="form-group col-sm-4" ng-if="!tarjeta.$valid">
 
                             <div class="alert alert-warning" >
-                                <strong>Warning!</strong><p>All inputs are required*</p>
+                                <strong>Advertencia!</strong><p>Todos los campos deben estar llenos*</p>
                             </div> 
                         </div> 
                     </div> 
