--- a/especialistas-web/src/main/webapp/index.html
+++ b/especialistas-web/src/main/webapp/index.html
@@ -148,7 +148,8 @@
             <h1 class="uk-width-1-6@xl uk-width-1-5@l">Asanar</h1>
             <div class="imgm">
                 Usuario X &nbsp;&nbsp;
-                <img class="uk-border-circle"  src="http://i0.kym-cdn.com/entries/icons/medium/000/005/180/YaoMingMeme.jpg" ui-sref="usuarioDetail ({usuarioId: idUser})">
+                <img class="uk-border-circle"  src="http://i0.kym-cdn.com/entries/icons/medium/000/005/180/YaoMingMeme.jpg" ng-show="tipoUser===1" ui-sref="usuarioDetail ({usuarioId: idUser})">
+                <img class="uk-border-circle"  src="http://i0.kym-cdn.com/entries/icons/medium/000/005/180/YaoMingMeme.jpg" ng-show="tipoUser===2" ui-sref="medicoDetail ({medicoId: idUser})">
                 <div uk-dropdown>Tipo Usuario <br><a  ui-sref="logOut"> salir <span uk-icon="icon: sign-out"></span></a></div>
             </div>
         </div>
@@ -158,7 +159,8 @@
         <!--BARRA LATERAL-->
         <div id="barra-lateral" class="uk-width-1-6@xl uk-width-1-5@l uk-card-default uk-card-body uk-box-shadow-large">
             <ul class="list1">
-                    <a ui-sref="usuarioDetail ({usuarioId: idUser})"><span uk-icon="icon: home"></span>&nbsp;&nbsp;Página Principal</a>
+                    <a ng-show="tipoUser===1" ui-sref="usuarioDetail ({usuarioId: idUser})"><span uk-icon="icon: home"></span>&nbsp;&nbsp;Página Principal</a>
+                   <a ng-show="tipoUser===2" ui-sref="medicoDetail ({medicoId: idUser})"><span uk-icon="icon: home"></span>&nbsp;&nbsp;Página Principal</a>
                     <a ui-sref="hospitalesList"><span uk-icon="icon: location"></span>&nbsp;&nbsp;Hospitales</a>
                     <a ui-sref="usuariosList" ng-show="tipoUser!==1 && tipoUser!==2"><span uk-icon="icon: users"></span>&nbsp;&nbsp;Usuarios</a>
                     <a ui-sref="tarjetasList"  ng-show="tipoUser!==1 && tipoUser!==2"><span uk-icon="icon: credit-card"></span>&nbsp;&nbsp;Tarjetas</a>
@@ -174,7 +176,7 @@
         </div>
 
                        <!--LOGIN-->
-                       <div class="log" ng-show="primera===undefined">
+        <div class="log" ng-show="primera===undefined">
             <div class="img"></div>
 
 
@@ -187,6 +189,14 @@
                 <div class="uk-card-body">
                     <h3 class="uk-card-title">Media Left</h3>
                     <p>Ingresa para.</p>
+                    <select style="color:black; position: absolute;top: 96px; right: 260px;" ng-model="e" id="meds" class="col-sm-6" >
+                        <option  value='med' ng-selected='true'>
+                            medico
+                         </option>    
+                        <option  value='usu'>
+                            usuario
+                         </option>                          
+                    </select>                    
                     <form>
 
                             <div class="uk-margin">
@@ -205,7 +215,8 @@
 
                             <div class="uk-margin">
                                 <div class="uk-inline" style="width: 100%">
-                                    <input  type="submit"   ui-sref="logInUser ({usuarioId:userId})" class="uk-button uk-button-primary" style="width: 100%;">
+                                    <input ng-show="e==='usu'" type="submit"   ui-sref="logInUser ({usuarioId:userId})" class="uk-button uk-button-primary" style="width: 100%;">
+                                    <input ng-show="e==='med'" type="submit"   ui-sref="logInMed ({usuarioId:userId})" class="uk-button uk-button-primary" style="width: 100%;">
                                 </div>
                             </div>
 
