--- a/especialistas-web/src/main/webapp/src/modules/usuarios/login/usuarios.login.html
+++ b/especialistas-web/src/main/webapp/src/modules/usuarios/login/usuarios.login.html
@@ -10,7 +10,7 @@
             </div>
             <div>
                 <div class="uk-card-body">
-                    <h3 class="uk-card-title">Media Left</h3>
+                    <h3 class="uk-card-title">Viva Santafecito</h3>
                     <p>Ingresa para.</p>
                     <select style="color:black; position: absolute;top: 96px; right: 260px;" ng-model="e" id="meds" class="col-sm-6" >
                         <option  value='med' ng-selected='true'>
