--- a/especialistas-web/src/main/webapp/src/modules/usuarios/usuarios.detail.html
+++ b/especialistas-web/src/main/webapp/src/modules/usuarios/usuarios.detail.html
@@ -105,7 +105,7 @@
             </tbody>
     </table>
     <div class="usuario-data">
-        <a href="#" ui-sref="usuariosDelete({usuarioId: currentUsuario.id})">Agregar</a>
+        <a href="#" ui-sref="citasCreate({usuarioId: currentUsuario.id})">Agregar</a>
     </div>
 </div>
 </div>
