relaciones ordenes total

--- a/especialistas-web/src/main/webapp/src/modules/ordenesMedicas/ordenesMedicas.detail.html
+++ b/especialistas-web/src/main/webapp/src/modules/ordenesMedicas/ordenesMedicas.detail.html
@@ -6,4 +6,6 @@
     <h5>        </h5>
     <h4>Examenes</h4>
     <div ng-repeat="examen in currentOrden.examenes" value={{examen}}><a ui-sref="examDetail ({examenId:examen.id})">{{examen.nombre}}</a></div>
+    <h4>Medicamentos</h4>
+    <div ng-repeat="medicamento in currentOrden.medicamentos" value={{medicamento}}><a ui-sref="medicamentoDetail ({id:medicamento.id})">{{medicamento.nombre}}</a></div>
 </div>
