--- a/especialistas-web/src/main/webapp/src/modules/ordenesMedicas/create/ordenesMedicas.create.html
+++ b/especialistas-web/src/main/webapp/src/modules/ordenesMedicas/create/ordenesMedicas.create.html
@@ -6,20 +6,29 @@
                 <h2>    </h2>
                 <label ng-if="edit" id="editCita">Editar Información</label></div>
             <div class="panel-body">
-                <form ng-submit="createOrdenMedica()" name="ordenMedica">
+                <form class="uk-form" ng-submit="createOrdenMedica()" name="ordenMedica">
                     <div class="form-group">
                         <label for="descripcion">Descripcion</label>
                         <input id="descripcion" required ng-model="descripcion" class="form-control"/>
                     </div>
-                    <div class="form-group">
-        <label for="examenes">Examenes</label>
-        <select multiple class="form-control" id="examenNuevo" required ng-model="examenNuevo">
-            <option ng-repeat="examen in examenes" value={{examen}}>{{examen.nombre}}</option>
-        </select>
-    </div>
+
+                    <div class="form-group"><br>
+                        <label for="examenes">Examenes</label>
+                        <br>
+                        <select multiple class="form-control" id="examenNuevo" required ng-model="examenNuevo">
+                            <option ng-repeat="examen in examenes" value={{examen}}>{{examen.nombre}}</option>
+                        </select>
+                    </div>
+                    <div class="form-group"><br>
+                        <label for="medicamentos">Medicamentos</label>
+                        <br>
+                        <select multiple class="form-control" id="medicamentoNuevo" required ng-model="medicamentoNuevo">
+                            <option ng-repeat="medicamento in medicamentos" value={{medicamento}}>{{medicamento.nombre}}</option>
+                        </select>
+                    </div>
                     <h3>    </h3>
-                        
-                   <div class="form-group" ng-if="!ordenMedica.$valid">
+
+                    <div class="form-group" ng-if="!ordenMedica.$valid">
                         <div class="alert alert-warning" >
                             <strong>Atención!</strong><p>Todos los campos son obligatorios</p>
                         </div> 
